packages/taquito-michel-codec/test/contracts_015/ill_typed/dip_failwith.tz
# Test that DIP {FAILWITH} is not allowed by the typechecker
parameter string;
storage nat;
code { UNPAIR; DIP {FAILWITH} }
